--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -1136,7 +1136,7 @@
                                 <rect key="frame" x="10" y="20" width="580" height="560"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="F26-Jd-bXK" customClass="CLCommentTableView">
-                                        <rect key="frame" x="0.0" y="69" width="580" height="425"/>
+                                        <rect key="frame" x="0.0" y="54" width="580" height="454"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" id="RW2-nf-Jte" customClass="CLCommentCell">
@@ -1171,17 +1171,17 @@
                                         </connections>
                                     </tableView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hu2-Hf-zRS">
-                                        <rect key="frame" x="0.0" y="495" width="580" height="66"/>
+                                        <rect key="frame" x="0.0" y="507" width="580" height="54"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="66" id="FH6-3o-67W"/>
+                                            <constraint firstAttribute="height" constant="54" id="FH6-3o-67W"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yLY-rc-Noz">
-                                        <rect key="frame" x="0.0" y="0.0" width="580" height="66"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="580" height="54"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="66" id="tgx-vz-Vp5"/>
+                                            <constraint firstAttribute="height" constant="54" id="tgx-vz-Vp5"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -1193,11 +1193,11 @@
                                     <constraint firstItem="yLY-rc-Noz" firstAttribute="leading" secondItem="nGb-nD-iZ7" secondAttribute="leading" id="HX6-yX-LIn"/>
                                     <constraint firstAttribute="trailing" secondItem="F26-Jd-bXK" secondAttribute="trailing" id="QMg-4X-qlM"/>
                                     <constraint firstAttribute="trailing" secondItem="yLY-rc-Noz" secondAttribute="trailing" id="WaB-mT-H2X"/>
-                                    <constraint firstItem="Hu2-Hf-zRS" firstAttribute="top" secondItem="F26-Jd-bXK" secondAttribute="bottom" constant="1" id="cnF-zh-7Vp"/>
-                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="top" secondItem="yLY-rc-Noz" secondAttribute="bottom" constant="3" id="izu-Lt-KhW"/>
+                                    <constraint firstItem="Hu2-Hf-zRS" firstAttribute="top" secondItem="F26-Jd-bXK" secondAttribute="bottom" constant="-1" id="cnF-zh-7Vp"/>
+                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="top" secondItem="yLY-rc-Noz" secondAttribute="bottom" id="izu-Lt-KhW"/>
                                     <constraint firstItem="Hu2-Hf-zRS" firstAttribute="leading" secondItem="nGb-nD-iZ7" secondAttribute="leading" id="o4n-th-p9Y"/>
                                     <constraint firstAttribute="bottom" secondItem="Hu2-Hf-zRS" secondAttribute="bottom" constant="-1" id="pOt-OO-5yD"/>
-                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="top" constant="69" id="zyo-Z4-yDI"/>
+                                    <constraint firstItem="F26-Jd-bXK" firstAttribute="top" secondItem="nGb-nD-iZ7" secondAttribute="top" constant="54" id="zyo-Z4-yDI"/>
                                 </constraints>
                             </view>
                         </subviews>
